tests/cases/capacity_zero.rs
#![deny(warnings)]

use static_vector::Vec;

fn main() {
    const NEW: Vec<i32, 0> = Vec::new();
}
